<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:gravity="center|start">

    <Button
        android:id="@+id/add_pic_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:drawableStart="@drawable/ic_album_orange_24dp"
        android:text="@string/add_picture_album"
        android:textColor="@color/colorOrange"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:background="@color/colorWhite"/>

    <Button
        android:id="@+id/add_pic_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:drawableStart="@drawable/ic_camera_orange_24dp"
        android:text="@string/add_picture_camera"
        android:textColor="@color/colorOrange"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:background="@color/colorWhite"/>

    <Button
        android:id="@+id/add_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:drawableStart="@drawable/ic_orange_font"
        android:text="@string/add_word"
        android:textColor="@color/colorOrange"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:background="@color/colorWhite"/>


</LinearLayout>