<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"

        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textSize="16dp"
            android:id="@+id/create_book"
            android:layout_centerVertical="true"
            android:textColor="@color/blue_4e"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="32dp"
            android:layout_centerInParent="true"
            android:text="@string/select_book"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="@color/gray_46" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textSize="16dp"
            android:id="@+id/select_book_finish"
            android:textColor="@color/blue_4e"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d3d3d3"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:id="@+id/recycler_view"
            android:layout_gravity="center_horizontal"
            android:padding="5dp" />



</LinearLayout>
