<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/exit"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:drawableStart="@drawable/ic_cancel_white_24dp"
            android:background="@color/transparent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/next_step"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:background="@color/transparent"/>

    </LinearLayout>



    <me.pqpo.smartcropperlib.view.CropImageView
        android:id="@+id/crop_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        app:civShowEdgeMidPoint="true"
        app:civLineColor="@color/colorPrimary"
        app:civMagnifierCrossColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_marginEnd="8dp"
            android:drawableTop="@drawable/ic_reset"
            android:textColor="@color/colorWhite"
            android:background="@color/transparent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/rotate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate"
            android:layout_marginStart="8dp"
            android:drawableTop="@drawable/ic_paint_rotate_24dp"
            android:textColor="@color/colorWhite"
            android:background="@color/transparent"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
