<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:background="@color/gray_f2"
    tools:context="com.luckyxmobile.correction.ui.activity.MainActivity">


    <!--使用Toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/menu_pop_window"
        app:title="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <SearchView
            android:id="@+id/main_top_search"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:queryBackground="@null"
            android:showDividers="none"
            android:submitBackground="@null"
            app:layout_scrollFlags="scroll|enterAlways"
            android:iconifiedByDefault = "false"
            android:background="@drawable/main_search_background"
            android:queryHint="@string/search"/>

    </LinearLayout>

   <androidx.core.widget.NestedScrollView
       android:id="@+id/scrollView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_below="@+id/toolbar"
       android:fillViewport="true"
       android:background="@color/transparent">

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center|top">

           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:background="@drawable/main_centre_background">

               <TextView
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:gravity="center|start"
                   android:paddingStart="16dp"
                   android:paddingEnd="16dp"
                   android:text="@string/correction_book"
                   android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"/>

               <TextView
                   android:id="@+id/add_book_main"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:gravity="center|end"
                   android:paddingStart="16dp"
                   android:paddingEnd="16dp"
                   android:text="@string/add_correction_book"
                   android:textColor="@color/blue_title"
                   android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"/>

           </LinearLayout>

           <com.yanzhenjie.recyclerview.SwipeRecyclerView
                android:id="@+id/main_recycler_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
               android:paddingBottom="8dp"
                android:background="@drawable/main_centre_background" />

           <TextView
               android:id="@+id/recent_topic_text"
               android:layout_width="match_parent"
               android:layout_height="48dp"
               android:gravity="start|bottom"
               android:paddingStart="16dp"
               android:paddingEnd="16dp"
               android:paddingBottom="8dp"
               android:text="@string/recent_topic"
               android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"/>

           <com.yanzhenjie.recyclerview.SwipeRecyclerView
               android:id="@+id/main_recycler_recent_topic"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingBottom="8dp"
               android:focusable="false"
               android:focusableInTouchMode="false"/>

       </LinearLayout>
   </androidx.core.widget.NestedScrollView>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="62dp"
        android:layout_height="62dp"
        style="@style/AVLoadingIndicatorView.Large"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:indicatorName="BallPulseIndicator"
        app:indicatorColor="@color/colorPrimary" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        fab:fab_addButtonColorNormal="@color/colorAccent"
        fab:fab_addButtonColorPressed="@color/colorAccent"
        fab:fab_addButtonPlusIconColor="@color/colorWhite"
        app:fab_addButtonSize="normal"
        fab:fab_labelStyle="@style/menu_labels_style">


        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_camera"
            fab:fab_colorNormal="@color/colorWhite"
            fab:fab_title="@string/choose_from_camera"
            fab:fab_colorPressed="#f1f1f1"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_album"
            fab:fab_colorNormal="@color/colorWhite"
            fab:fab_title="@string/choose_from_album"
            fab:fab_colorPressed="#f1f1f1"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</RelativeLayout>